@@ -1698,6 +1698,11 @@ void G_Damage( gentity_t *targ, gentity_t *inflictor, gentity_t *attacker,  vec3
 	int			ffDamage; //Perro: FF reflecting damage
 	float		hsRatio; // Replacement for g_dmg 8
 	
+	// pheno: mode - no damage on players
+	if( targ->client && ( g_mode.integer & MODE_NODAMAGE ) ) {
+		return;
+	}
+
 	if (!targ->takedamage) {
 		return;
 	}
